[package]
name = "abjad-sled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.35.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sled = "0.34.7"

users = "0.11.0"
dirs = "5.0.1"
rocket = { version = "=0.5.0-rc.4", features = ["json"] }
env_logger = "0.10.1"
log = "0.4.20"
bincode = "1.3.3"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.31"
lazy_static = "1.4.0"
